name: MyXmonad
version: 0.1.0.0
license: BSD3
cabal-version: >= 1.10

executable xmonad
  hs-source-dirs: src
  main-is: xmonad.hs
  build-depends: base >= 4.7 && < 5
               , xmonad
               , xmonad-contrib
               , random
  ghc-options: -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010

